--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-    <meta name="google-site-verification" content="your-verification-code" />
-    <meta http-equiv="refresh" content="0; url=https://www.myminifactory.com/users/nicholashoult">
+
+    <meta http-equiv="refresh" content="0; url=https://podcastaddict.com/?id=https%3A%2F%2Fanchor.fm%2Fs%2F103d0d014%2Fpodcast%2Fplay%2F101416355%2Fhttps%253A%252F%252Fd3ctxlq1ktw2nl.cloudfront.net%252Fstaging%252F2025-3-17%252F4e99ac31-4bff-7a3b-b009-040804c183c1.mp3&podcastId=5827003">
     <title>Redirecting...</title>
 </head>
 <body>
